Fix margin under navbar on small screens

--- a/src/main/webapp/static/css/header.css
+++ b/src/main/webapp/static/css/header.css
@@ -16,5 +16,5 @@
 }
 
 .container {
-    margin-top: 10%;
+    margin-top: 110px;
 }
